--- a/master.css
+++ b/master.css
@@ -1,43 +1,53 @@
 *{
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    
 }
 
 /** regole container superiore logo e link **/
-.container-superiore{
-    background-color: white;
+.container-superiore {
+    
     height: 100px; 
-    background-color: #a7e4ff;
-    background-repeat: repeat;
-    background-size:auto;
+    background-color:rgb(173, 216, 230);
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 
 /** regole classe logo e login**/
 .logo-login{
-    align-items: center;
-    background-color: rgb(255, 255, 141);
-    height: 40px;
+    
+    background-color: rgb(218, 165, 32);
+    font-size: 20px;
     width: 200px;
     border: 1px dashed;
+    margin: 15px 0px 15px;
+    padding: 5px 220px; 
+}
+
+a{
+    
+    text-decoration: none;
+}
+
+#logo{
+    text-align: left;
+    padding-left: 5px;
+    padding-right: 100px;
     
 }
 
 #login{
     text-align: right;
+    padding-right: 5px;
+    padding-left: 100px;
 }
 
 /** regole navigazione**/
-#link{
-    align-content: center;
-    text-align: center;
-    background-color: rgb(255, 255, 141);
-    height: 40px;
-    width: 600px;
-    border: 1px dashed;
-}
+
+
 /** **/
 
 /** **/
