parte sino al quarto quadrato

--- a/master.css
+++ b/master.css
@@ -25,10 +25,16 @@
     border: 1px dashed;
     margin: 15px 0px 15px;
     padding: 5px 220px; 
+    
 }
 
-a{
-    
+nav{
+    gap: 10px;
+    display: flex;
+}
+
+a, span{
+    color: black;
     text-decoration: none;
 }
 
@@ -45,9 +51,76 @@ a{
     padding-left: 100px;
 }
 
-/** regole navigazione**/
+/** regole container section  **/
+.section1{
+    background-color: darkblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
-/** **/
+/** quadrato rosa **/
+.container1{
+    background-color:  rgb(238, 130, 238);
+    height: 300px;
+    width: 800px;
+    border: 1px dashed;
+    margin: 40px;
+}
+/** primo quadrato azzurro e rosa carne**/
 
-/** **/
+/** parte rosa carne**/
+.color1{
+    background-color:  rgb(253, 190, 195);
+    height: 300px;
+    width: 250px;
+    border: 1px dashed;
+    margin: 40px 0px;
+}
+
+/** parte azzurra**/
+.color2{
+    background-color:  rgb(30, 144, 255);
+    height: 300px;
+    width: 550px;
+    border: 1px dashed;
+    margin: 40px 0px;
+}
+
+/** sfondo bianco**/
+.section2{
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/** secondo quadrato azzurro e rosa carne**/
+
+/** parte rosa carne**/
+
+.color1{
+    background-color:  rgb(253, 190, 195);
+    height: 300px;
+    width: 250px;
+    border: 1px dashed;
+    margin: 40px 0px;
+}
+
+/** parte azzurra**/
+.color2{
+    background-color:  rgb(30, 144, 255);
+    height: 300px;
+    width: 550px;
+    border: 1px dashed;
+    margin: 40px 0px;
+}
+
+/** sfondo grigio **/
+.section3{
+    background-color: rgb(211, 211, 211);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
