--- a/master.css
+++ b/master.css
@@ -124,3 +124,38 @@ a, span{
     align-items: center;
     justify-content: center;
 }
+
+/** quadrato verde **/
+.container-verde{
+    background-color:  rgb(34, 139, 34);
+    height: 900px;
+    width: 800px;
+    border: 1px dashed;
+    margin: 40px;
+}
+
+/** sfondo scuro **/
+.section4{
+    background-color: rgb(35, 39, 42);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#prima-parte{
+    background-color: rgb(240, 128, 128);
+    height: 300px;
+    width: 280px;
+    border: 1px dashed;
+    margin: 40px 0px;
+}
+
+.verde-acqua{
+    background-color: rgb(32, 178, 170);
+    height: 300px;
+    width: 130px;
+    border: 1px dashed;
+    margin: 40px 0px;
+
+}
+
