--- a/master.css
+++ b/master.css
@@ -140,6 +140,7 @@ a, span{
     display: flex;
     align-items: center;
     justify-content: center;
+    border-bottom: 2px solid grey;
 }
 
 #prima-parte{
@@ -148,6 +149,7 @@ a, span{
     width: 280px;
     border: 1px dashed;
     margin: 40px 0px;
+    
 }
 
 .verde-acqua{
@@ -159,3 +161,38 @@ a, span{
 
 }
 
+
+
+footer{
+    background-color: rgb(35, 39, 42);
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+#container-finale{
+    background-color:  rgb(124, 242, 213);
+    height: 50px;
+    width: 800px;
+    
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#logo-finale{
+    border: 1px dashed;
+    background-color: rgb(255, 181, 181);
+    color: black;
+    padding: 5px;
+}
+
+
+
+input{
+    background-color: rgb(255, 181, 181);
+    color: black;
+    border: 1px dashed;
+    padding: 5px;
+}
